--- a/sample/index.html
+++ b/sample/index.html
@@ -9,14 +9,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://dev-test.dash.org/socket.io/socket.io.js"></script>
-    <script src="js/iziModal.min.js" type="text/javascript"></script>
-    <script src="js/jquery-qrcode.min.js"></script>
+    <script src="../js/iziModal.min.js" type="text/javascript"></script>
+    <script src="../js/jquery-qrcode.min.js"></script>
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/iziModal.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/iziModal.min.css">
 
 
-    <script src="js/checkout.js"></script>
+    <script src="../js/checkout.js"></script>
 
     <script type="text/javascript">
 
@@ -102,8 +102,6 @@
 
                     jQuery('#formatted_dash').text(parseFloat(paymentReceiver.amount_duffs / 100000000).toFixed(2) + ' DASH');
 
-                    jQuery('#formatted_duffs').text(parseFloat(paymentReceiver.amount_duffs / 100).toFixed(2) + ' dots');
-
                     jQuery('#formLabel_address').text(paymentReceiver.dash_payment_address);
 
                     checkout.paymentWindowActive = true;
@@ -149,13 +147,12 @@
 
                         <div class="form-group row">
                             <label class="col-form-label formLabel formLabel_amount" id="formatted_dash">Amount</label>
-                            <span class="formValue" id="formatted_duffs"></span>
                         </div>
 
                         <br />
 
                         <div class="form-group row">
-                            <label class="col-form-label formLabel">Status</label>
+                            <label class="col-form-label formLabel" id="formatted_status">Order Status</label>
                             <span class="formValue" id="checkout_status">Pending</span>
                         </div>
 
@@ -165,7 +162,7 @@
                 <div class="row">
                     <div class="col-xs-12">
 
-                        <div id="address"><strong>Address: </strong><span id="formLabel_address"></span></div>
+                        <div id="address"><strong>Address: </strong><span id="formLabel_address" id="formatted_address"></span></div>
 
                     </div>
                 </div>
